Added filecontentindex to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 
 /DiceMaster3600/.vs/DiceMaster3600/FileContentIndex/0efd244e-58aa-4cee-87cf-7b2fc420cde9.vsidx
 /DiceMaster3600/.vs/DiceMaster3600/FileContentIndex/48c5d636-229f-4c42-b0e7-830500d4ee6f.vsidx
+/DiceMaster3600/.vs/DiceMaster3600/FileContentIndex
