--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@
 /DiceMaster3600/obj/Debug/net6.0-windows
 /DiceMaster3600/.vs/DiceMaster3600/v17/.suo
 /DiceMaster3600/.vs/DiceMaster3600/DesignTimeBuild/.dtbcache.v2
+/DiceMaster3600/.vs/DiceMaster3600/v17/.futdcache.v2
+/DiceMaster3600/.vs/ProjectEvaluation/dicemaster3600.metadata.v7.bin
+/DiceMaster3600/.vs/ProjectEvaluation/dicemaster3600.projects.v7.bin
+/DiceMaster3600/bin/Debug/net6.0-windows/DiceMaster3600.dll
+/DiceMaster3600/bin/Debug/net6.0-windows/DiceMaster3600.pdb
+/DiceMaster3600/obj/Debug/net6.0-windows/ref/DiceMaster3600.dll
+/DiceMaster3600/obj/Debug/net6.0-windows/refint/DiceMaster3600.dll
