Added Dice Controls

--- a/DiceMaster3600/DiceMaster3600.csproj
+++ b/DiceMaster3600/DiceMaster3600.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+    <PackageReference Include="LiveChartsCore.SkiaSharpView.WPF" Version="2.0.0-rc2" />
     <PackageReference Include="Material.Icons.WPF" Version="2.1.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
@@ -25,10 +26,6 @@
   <ItemGroup>
     <ProjectReference Include="..\DiceMaster3600.Core\DiceMaster3600.Core.csproj" />
     <ProjectReference Include="..\DiceMaster3600.Data\DiceMaster3600.Data.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Model\" />
   </ItemGroup>
 
   <ItemGroup>
