--- a/DiceMaster3600/DiceMaster3600.csproj
+++ b/DiceMaster3600/DiceMaster3600.csproj
@@ -15,9 +15,10 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageReference Include="Emgu.CV" Version="4.8.1.5350" />
+    <PackageReference Include="Emgu.CV" Version="4.9.0.5494" />
+    <PackageReference Include="Emgu.CV.runtime.windows" Version="4.9.0.5494" />
     <PackageReference Include="Intel.RealSenseWithNativeDll" Version="2.51.1.1" />
-    <PackageReference Include="LiveChartsCore.SkiaSharpView.WPF" Version="2.0.0-rc2" />
+    <PackageReference Include="LiveChartsCore.SkiaSharpView.WPF" Version="2.0.0-rc1" />
     <PackageReference Include="Material.Icons.WPF" Version="2.1.0" />
     <PackageReference Include="MaterialDesignColors" Version="3.1.0-ci589" />
     <PackageReference Include="MaterialDesignThemes" Version="5.0.1-ci589" />
