--- a/DiceMaster3600.Core/DiceMaster3600.Core.csproj
+++ b/DiceMaster3600.Core/DiceMaster3600.Core.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Emgu.CV" Version="4.9.0.5494" />
+    <PackageReference Include="Emgu.CV.runtime.windows" Version="4.9.0.5494" />
+    <PackageReference Include="Intel.RealSenseWithNativeDll" Version="2.51.1.1" />
     <PackageReference Include="Serilog" Version="4.0.0-dev-02149" />
     <PackageReference Include="Serilog.Sinks.Console" Version="5.1.0-dev-00943" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.1-dev-00972" />
