--- a/DiceMaster3600/DiceMaster3600.csproj
+++ b/DiceMaster3600/DiceMaster3600.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0-preview1" />
     <PackageReference Include="Emgu.CV" Version="4.9.0.5494" />
     <PackageReference Include="Emgu.CV.runtime.windows" Version="4.9.0.5494" />
+    <PackageReference Include="FluentValidation" Version="11.10.0" />
     <PackageReference Include="Intel.RealSenseWithNativeDll" Version="2.51.1.1" />
     <PackageReference Include="LiveChartsCore.SkiaSharpView.WPF" Version="2.0.0-rc1" />
     <PackageReference Include="Material.Icons.WPF" Version="2.1.0" />
